# fifa-penalty-shootout-2026

./: .gitignore  LICENSE  README.md  game_sim.py  groups.py  groupstage.py  knockouts.py  match_type.py  opponent_selection.py  pyproject.toml  qualification.py  shootout.py  standings.py  team_data.py  team_selection.py  tournament_mode.py  world_cup.py
