[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-penalty-shootout-2026"
version = "0.1.3"
description = "Penalty shootout game based on FIFA World Cup 2026"
requires-python = ">=3.8"
keywords = ["World Cup", "world cup", "fifa", "FIFA"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = []

[project.scripts]
fifa-shootout = "world_cup:main"
fifa = "world_cup:main"

[tool.setuptools]
py-modules = [
    "world_cup",
    "match_type",
    "shootout",
    "team_selection",
    "opponent_selection",
    "tournament_mode",
    "team_data"
]