[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-penalty-shootout-2026"
version = "1.1.3"
description = "A fun penalty shootout CLI game based on FIFA World Cup 2026"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dinesh Krishnan Gnanasubramanian", email = "dineshk262809@gmail.com"}
]
keywords = ["fifa", "world cup", "penalty", "shootout", "game", "cli", "football"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation"
]
dependencies = []

[project.scripts]
fifa-shootout = "world_cup:main"

[tool.setuptools]
py-modules = [
    "world_cup",
    "match_type",
    "shootout",
    "team_selection",
    "opponent_selection",
    "tournament_mode",
    "team_data",
    "groupstage",
    "knockouts",
    "qualification",
    "game_sim",
    "standings",
    "groups"
]